iconv -f ISO-8859-1 -t UTF-8 AUTHORS > AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-Christian Hohnst‰dt <christian@hohnstaedt.de>
+Christian Hohnst√§dt <christian@hohnstaedt.de>
 	Programming, translation, testing
 
 Kerstin Steinhauff <tine@kerstine.de> 
