--- a/changelog
+++ b/changelog
@@ -1,4 +1,5 @@
 
+  * add french translation by Patrick Monnerat
   * Export requests or certificates as openssl config file
   * Support building with EC disabled
   * Close bug [3091576] Private key export is always PKCS#8 encoded
